--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>AP - Learning WebGL</title>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
-<script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
+<script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
 
 <script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
@@ -26,9 +26,9 @@
     }
 </script>
 
-<script type="text/javascript" src="leap.js"></script>
-<script type="text/javascript" src="app.js"></script>
-<script type="text/javascript" src="leapGL.js"></script>
+<script type="text/javascript" src="js/leap.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/leapGL.js"></script>
 
 </head>
 
