--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
 <script type="text/javascript" src="js/glMatrix-0.9.5.min.js"></script>
+<script type="text/javascript" src="js/webgl-utils.js"></script>
 
 <script id="shader-fs" type="x-shader/x-fragment">
     precision mediump float;
@@ -34,7 +35,7 @@
 
 <script type="text/javascript" src="js/leap.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/leapGL.js"></script>
+<script type="text/javascript" src="js/glView,js"></script>
 </head>
 
 <body onload="app.initialise()">
