--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <script type="text/javascript" src="js/leap.js"></script>
 <script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/glView,js"></script>
+<script type="text/javascript" src="js/glView.js"></script>
 </head>
 
 <body onload="app.initialise()">
