--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <body onload="app.initialise()">
     <canvas id="cube-canvas" style="border: none;" width="500" height="500"> </canvas>
+    <div id="out"> </div>
 </body>
 
 </html>
